--- a/login_style.css
+++ b/login_style.css
@@ -14,13 +14,14 @@
 }
 .form {
   position: relative;
+  border-radius: 25px;
   z-index: 1;
-  background: #48c9b0;
+  background: #1c32f8;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 0 20px 0 rgb(255, 255, 255), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   
 }
 .form input {
